postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/bridge: "true"
        service: postgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: mayan
            - name: POSTGRES_PASSWORD
              valueFrom:
                fieldRef:
                  fieldPath: projects/eht-cloud/secrets/MAYAN_DATABASE_PASSWORD/versions/1
            - name: POSTGRES_USER
              value: mayan
          image: postgres:9.6-alpine
          name: postgresql
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres
      restartPolicy: Always
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
status: {}
