redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis-service
  name: redis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: redis-service
    spec:
      containers:
        - env:
            - name: MAYAN_REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mayan-database-info
                  key: MAYAN_REDIS_PASSWORD
          args:
            - redis-server
            - --appendonly
            - "no"
            - --databases
            - "2"
            - --maxmemory
            - 100mb
            - --maxclients
            - "500"
            - --maxmemory-policy
            - allkeys-lru
            - --save
            - ""
            - --tcp-backlog
            - "256"
            - --requirepass
            - $MAYAN_REDIS_PASSWORD
          image: redis:5.0-alpine
          name: redis
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redis
      restartPolicy: Always
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
status: {}
