mayan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mayan
  labels:
    service: mayan
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mayan
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: mayan
    spec:
      containers:
        - name: mayan
          image: mayanedms/mayanedms:3
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /var/lib/mayan
              name: mayan
      restartPolicy: Always
      volumes:
        - name: mayan
          persistentVolumeClaim:
            claimName: mayan
---
apiVersion: v1
kind: Service
metadata:
  name: mayan
  labels:
    service: mayan
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8000
  selector:
    service: mayan
