redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: redis
    spec:
      containers:
        - env:
            - name: MAYAN_REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mb-secret
                  key: password
          args:
            - redis-server
            - --appendonly
            - "no"
            - --databases
            - "2"
            - --maxmemory
            - 100mb
            - --maxclients
            - "500"
            - --maxmemory-policy
            - allkeys-lru
            - --save
            - ""
            - --tcp-backlog
            - "256"
            - --requirepass
            - $MAYAN_REDIS_PASSWORD
          image: redis:5.0-alpine
          name: redis
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redis
      restartPolicy: Always
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    service: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    service: redis
