bridge.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bridge
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/bridge: "true"
  podSelector:
    matchLabels:
      network/bridge: "true"
